fixed issues with startup color scheme, changed reference sheet design

--- a/reference.html
+++ b/reference.html
@@ -1,43 +1,46 @@
 <html>
-<head>
-	<style type="text/css" media="screen">
-		body {
-			background: transparent;
-			margin: 30px 20px;
-			padding: 0;
-			margin-top: 12px;
-			font-family: "Helvetica Neue";
-			font-size: 13px;
-			line-height: 1.30em;
-		}
-		
-		h1, h2, h3, h4, h5 {
-			font-weight: 300;
-			letter-spacing: 0.05em;
-			margin: 12px 0 0 0;
-			padding: 0;
-		}
+	<head>
+		<style type="text/css" media="screen">
+			body {
+				background: transparent;
+				margin: 12px 0;
+				font-family: "Helvetica Neue";
+				font-size: 13px;
+				line-height: 1.30em;
+			}
 		
 		h3 {
+			margin: 36px 20px 20px 20px;
 			font-size: 1.4em;
 			margin-top: 36px;
+			font-weight: 300;
+			letter-spacing: 0.05em;
+			padding: 0;
 		}
 		
 		h3:first-child {
-			margin-top: 12px;
+			margin-top: 20px;
 		}
 		
 		div.item {
-			margin: 8px 0;
+			padding: 8px 30px;
+		}
+		
+		div.item:nth-child(odd) {
+			background: rgba(0, 0, 0, 0.05);
+		}
+		
+		div.item:nth-child(even) {
+			background: rgba(0, 0, 0, 0.025);
 		}
 		
 		div.item > div.code {
 			width: 4em;
-			background: rgba(0, 0, 0, 0.15);
+			font-size: 14px;
 			padding: 6px 10px;
 			border-radius: 3px;
 			display: table-cell;
-			text-align: center;
+			text-align: left;
 			font-weight: 300;
 			font-family: "Monaco", "Menlo";
 			vertical-align: middle;
@@ -66,176 +69,179 @@
 			padding-left: 12px;
 			vertical-align: middle;
 		}
+		</style>
+	</head>
+	<body>
+		<h3>Basics</h3>
+		<div class="item">
+			<div class="code"><span class="metacharacter">.</span></div>
+			<div class="title">Any character except a newline</div>
+		</div>
+		<div class="item">
+			<div class="code">
+				<span class="content">a</span>
+			</div>
+			<div class="title">The letter a</div>
+		</div>
+		<div class="item">
+			<div class="code">
+				<span class="content">a<span class="metacharacter">|</span>b</span>
+			</div>
+			<div class="title">Either a or b</div>
+		</div>
+		<div class="item">
+			<div class="code">
+				<span class="content">a<span class="metacharacter">*</span></span>
+			</div>
+			<div class="title">0 or more a's</div>
+		</div>
+		<div class="item">
+			<div class="code">
+				<span class="metacharacter">\</span>
+			</div>
+			<div class="title">Escapes a special character</div>
+		</div>
 		
-		div.item > div.example {
-			margin: 12px 0 20px 80px;
-			width: 300px;
-			padding: 8px 12px;
-			white-space: nowrap;
-		}
-	</style>
-</head>
-<body>
-	<h3>Metacharacters</h3>
-	<p>
-	Matacharacters express sets of characters or special characters.
-	</p>
-	<div class="item">
-		<div class="code"><span class="special">.</span></div>
-		<div class="title">any character</div>
-	</div>
-	<div class="item">
-		<div class="code">
-			<span class="special">^</span>
+		<h3>Characters</h3>
+		<div class="item">
+			<div class="code"><span class="special">\d</span></div>
+			<div class="title">One digit from 0-9</div>
 		</div>
-		<div class="title">beginning of a line</div>
-	</div>
-	<div class="item">
-		<div class="code">
-			<span class="special">$</span>
+		<div class="item">
+			<div class="code">
+				<span class="special">\w</span>
+			</div>
+			<div class="title">A word</div>
 		</div>
-		<div class="title">end of a line</div>
-	</div>
-	<div class="item">
-		<div class="code">
-			<span class="special">\</span>
+		<div class="item">
+			<div class="code">
+				<span class="special">\s</span>
+			</div>
+			<div class="title">Whitespace character</div>
 		</div>
-		<div class="title">quotes special characters (<span class="special">* ? + [ ] ( ) { } ^ $ | \ . / </span>)</div>
-	</div>
-	<div class="item">
-		<div class="code">
-			<span class="metacharacter">\w</span>
+		<div class="item">
+			<div class="code">
+				<span class="special">\D</span>
+			</div>
+			<div class="title">One non-digit</div>
 		</div>
-		<div class="title">word</div>
-	</div>
-	<div class="item">
-		<div class="code">
-			<span class="metacharacter">\t</span>
+		<div class="item">
+			<div class="code">
+				<span class="special">\S</span>
+			</div>
+			<div class="title">One non-whitespace</div>
 		</div>
-		<div class="title">horizontal tabulation</div>
-	</div>
-	<div class="item">
-		<div class="code">
-			<span class="metacharacter">\n</span>
+		<div class="item">
+			<div class="code">
+				<span class="special">\W</span>
+			</div>
+			<div class="title">One non-word</div>
 		</div>
-		<div class="title">new line</div>
-	</div>
-	<div class="item">
-		<div class="code">
-			<span class="metacharacter">\d</span>
+		<div class="item">
+			<div class="code">
+				<span class="special"><span class="metacharacter">[</span>\b<span class="metacharacter">]</span></span>
+			</div>
+			<div class="title">Backspace</div>
 		</div>
-		<div class="title">any digit</div>
-	</div>
-	<div class="item">
-		<div class="code">
-			<span class="metacharacter">\s</span>
+		<div class="item">
+			<div class="code">
+				<span class="content"><span class="metacharacter">[</span>a-z<span class="metacharacter">]</span></span>
+			</div>
+			<div class="title">Any letter from a-z</div>
 		</div>
-		<div class="title"> white space character (<span class="metacharacter">\t \n \f \r \p{Z}</span>)</div>
-	</div>
-	<div class="item">
-		<div class="code">
-			<span class="metacharacter">[</span><span class="content">&hellip;</span><span class="metacharacter">]</span>
+		<div class="item">
+			<div class="code">
+				<span class="content"><span class="metacharacter">[</span>A-Z<span class="metacharacter">]</span></span>
+			</div>
+			<div class="title">Any letter from A-Z</div>
 		</div>
-		<div class="title">
-			match any character (or range of characters) inside the brackets. Range may be e.g. <span class="metacharacter">[a-z]</span>, <span class="metacharacter">[A-Z]</span>, <span class="metacharacter">[3&hellip;5]</span>, etc.
+		
+		<h3>Special Characters</h3>
+		<div class="item">
+			<div class="code">
+				<span class="special">\n</span>
+			</div>
+			<div class="title">Newline</div>
 		</div>
-	</div>
-	
-	<div class="item">
-		<div class="code">
-			<span class="metacharacter">\D</span>
+		<div class="item">
+			<div class="code">
+				<span class="special">\r</span>
+			</div>
+			<div class="title">Carriage return</div>
 		</div>
-		<div class="title">any character that is not a decimal digit</div>
-	</div>
-	<div class="item">
-		<div class="code">
-			<span class="metacharacter">\S</span>
+		<div class="item">
+			<div class="code">
+				<span class="special">\t</span>
+			</div>
+			<div class="title">Tab</div>
 		</div>
-		<div class="title">non-white space character</div>
-	</div>
-	<div class="item">
-		<div class="code">
-			<span class="metacharacter">\W</span>
+		<div class="item">
+			<div class="code">
+				<span class="special">\0</span>
+			</div>
+			<div class="title">Null character</div>
 		</div>
-		<div class="title">non-word character</div>
-	</div>
-	
-	<h3>Operators</h3>
-	<p>
-	Operators allow to desribe how an expression (or subexpression) should
-	be matched.
-	</p>
-	<div class="item">
-		<div class="code">
-			<span class="special">(</span><span class="content">&hellip;</span><span class="special">)</span>
+		
+		<h3>Assertions</h3>
+		<div class="item">
+			<div class="code">
+				<span class="special">^</span>
+			</div>
+			<div class="title">Start of string</div>
 		</div>
-		<div class="title">groups expression into subexpressions</div>
-	</div>
-	<div class="item">
-		<div class="code">
-			<span class="content">A</span><span class="special">|</span><span class="content">B</span>
+		<div class="item">
+			<div class="code">
+				<span class="special">$</span>
+			</div>
+			<div class="title">End of string</div>
 		</div>
-		<div class="title">alternation. Matches A or B</div>
-	</div>
-	<div class="item">
-		<div class="code">
-			<span class="special">^</span>
+		<div class="item">
+			<div class="code">
+				<span class="special">\b</span>
+			</div>
+			<div class="title">Word boundary</div>
 		</div>
-		<div class="title">negation</div>
-	</div>
-	<div class="item">
-		<div class="code">
-			<span class="special">*</span>
+		<div class="item">
+			<div class="code">
+				<span class="special">\B</span>
+			</div>
+			<div class="title">Non-word boundary</div>
 		</div>
-		<div class="title">match 0 or more times</div>
-	</div>
-	<div class="item">
-		<div class="code">
-			<span class="special">+</span>
+		
+		<h3>Quantifiers</h3>
+		<div class="item">
+			<div class="code">
+				<span class="special">*</span>
+			</div>
+			<div class="title">0 or more</div>
 		</div>
-		<div class="title">match 1 or more times</div>
-	</div>
-	<div class="item">
-		<div class="code">
-			<span class="special">?</span>
+		<div class="item">
+			<div class="code">
+				<span class="special">+</span>
+			</div>
+			<div class="title">1 or more</div>
 		</div>
-		<div class="title">match zero or one times</div>
-	</div>
-	<div class="item">
-		<div class="code">
-			<span class="special">{</span>n<span class="special">}</span>
+		<div class="item">
+			<div class="code">
+				<span class="special">?</span>
+			</div>
+			<div class="title">0 or 1</div>
 		</div>
-		<div class="title">match exactly n times</div>
-	</div>
-	<div class="item">
-		<div class="code">
-			<span class="special">{</span>n<span class="special">,</span>m<span class="special">}</span>
+		<div class="item">
+			<div class="code">
+				<span class="special">{</span><span class="content">2</span><span class="special">}</span>
+			</div>
+			<div class="title">Exactly 2</div>
 		</div>
-		<div class="title">match at least n time and not more than m</div>
-	</div>
-	
-	<h3>Non-capturing operators</h3>
-	<p>
-	These operators work by one simple rule. They are not captured in groups.
-	</p>
-	<div class="item">
-		<div class="code">
-			<span class="comment">(?#&hellip;)</span>
+		<div class="item">
+			<div class="code">
+				<span class="special">{</span><span class="content">2, 5</span><span class="special">}</span>
+			</div>
+			<div class="title">Between 2 and 5</div>
 		</div>
-		<div class="title">Comment</div>
-	</div>
-	<div class="item">
-		<div class="code">
-			<span class="special">(?:</span><span class="content">&hellip;</span><span class="special">)</span>
+		<div class="item">
+			<div class="code">
+				<span class="special">{</span><span class="content">2,</span><span class="special">}</span>
+			</div>
+			<div class="title">2 or more</div>
 		</div>
-		<div class="title">
-			Subexpression must occur but it's not captured in group.
-		</div>
-	</div>
-	<div class="item">
-		<div class="code">
-			<span class="special">(?!</span><span class="content">&hellip;</span><span class="special">)</span>
-		</div>
-		<div class="title">Makes sure that the subexpression does not occur at current position. It's useful to exclude part of expression.</div>
-	</div>
-
